# kai

./: .gitignore  .kaiignore  AGENTS.md  Kanban.md  LICENSE  README.md  RUN_INSTRUCTIONS.md  config.yaml  echo_server.js  index.js  jest.config.js  package-lock.json  package.json  test.py  test.sh  tsconfig.json
.kai/: scopes.yaml
__mocks__/: chalk.js  inquirer.js
apps/desktop/: electron-main.js  package.json  preload.cjs
apps/desktop/renderer/: index.html  main.js
docs/: 100coverageplay.md  AGENT_EXECUTION.md  AGENT_TDD.md  EPICS.md  _config.yml  benefits.md  index.md  kanban.md
docs/architecture/: index.md  s1_s2_tdd_vision.md
docs/concepts/: analysis_philosophy.md  competitive_landscape_assessment.md  index.md  personal_advantage_analysis.md  strategic_analysis_v2.md
docs/decisions/: ADR_001_Electron_Transition.md  ADR_002_Prefer_WebTech_for_GUI.md  ADR_003_Defer_Interactive_Kanban_GUI.md  index.md
docs/development/: focus_and_priorities_v1.md  index.md  phase1_branch_coverage.md
docs/explanations/: index.md  q1.md  q2.md  s1-s2-responsibility-distribution.md  s2-scaffolding-vs-modification-analysis.md  scaffold_mode.md
docs/future/: index.md  post_v1_options.md
docs/goals/: index.md  primary_objective_v1.md
docs/sample-specifications/: calculator-divide-spec.json  calculator-multiply-spec.json  electron-notepad-spec.json  electron-scientific-calculator-spec.json  personal-finance-app-spec.json
docs/strategy/: cultural_motivation_analysis.md  index.md  path_selection_rationale.md
lib/: AIClient.js  CodeProcessor.js  Config.js  FileSystem.js  UserInterface.js
lib/iterativeDiff/: FullScreenUI.js
qtsrc/: CMakeLists.txt  diffview.cpp  diffview.h  echo.js  mainwindow.cpp  mainwindow.h  test.js  test.py
qtsrc/src/: main.cpp
qtsrc/src/backend/: communicationmanager.cpp  communicationmanager.h
qtsrc/src/components/: chatinterface.cpp  chatinterface.h  diffview.cpp  diffview.h  mainwindow.cpp  mainwindow.h
qtsrc/src/components/backend/: communicationmanager.cpp  communicationmanager.h
qtsrc/src/components/chatinterface/: chatinterface.cpp  chatinterface.h  conversationhistory.cpp  conversationhistory.h  promptentry.cpp  promptentry.h
qtsrc/src/components/diffviewer/: diffcontentwidget.cpp  diffcontentwidget.h  diffview.cpp  diffview.h
qtsrc/src/models/: chatmodel.cpp  chatmodel.h  diffmodel.cpp  diffmodel.h
src/: kai.ts
src/lib/: AIClient.ts  CodeProcessor.ts  CommandService.ts  CommitMessageService.ts  Config.test.ts  Config.ts  ConsolidationAnalyzer.ts  ConsolidationApplier.ts  ConsolidationGenerator.ts  ConsolidationReviewer.ts  ConsolidationService.ts  ConversationManager.ts  DiffApplier.ts  FileSystem.test.ts  FileSystem.ts  GitService.ts  JsonlFile.test.ts  JsonlFile.ts  ProjectContextBuilder.ts  ProjectScaffolder.ts  ReviewUIManager.ts  ScopeManager.ts  ShellExecutor.ts  UserInterface.ts  WebService.ts  WebSocketServer.ts  config_defaults.ts  internal_prompts.ts  prompts.ts  system2-test-rig.ts  types.ts  utils.test.ts  utils.ts
src/lib/UserInteraction/: InteractivePromptReviewer.ts  PromptEditor.ts
src/lib/UserInteraction/__tests__/: InteractivePromptReviewer.test.ts  PromptEditor.test.ts
src/lib/__tests__/: AIClient.test.ts  CodeProcessor.test.ts  CommandService.test.ts  CommitMessageService.test.ts  Config.test.ts  ConversationManager.more.test.ts  ConversationManager.test.ts  DiffApplier.test.ts  FileSystem.test.ts  GitService.test.ts  ProjectContextBuilder.additional.test.ts  ProjectContextBuilder.test.ts  ProjectScaffolder.test.ts  UserInterface.test.ts
src/lib/analysis/: ProjectAnalyzerService.ts  prompts.ts  types.ts
src/lib/analysis/__tests__/: ProjectAnalyzerService.test.ts
src/lib/code-gen/: ApplicationStartup.ts  Budgeting.ts  Editing-TextInput.ts  Editing-WordCount.ts  ExpenseCategorization.ts  FileOperations-New.ts  FileOperations-Open.ts  FileOperations-Save.ts  HistoricalDataView&Filtering.ts  LocalPersistence.ts  SimulatedServerSync.ts  TransactionManagement.ts
src/lib/codeprocessor/: CodeProcessor.ts  PromptBuilder.ts  RelevantFileFinder.ts
src/lib/codeprocessor/__tests__/: PromptBuilder.test.ts  RelevantFileFinder.test.ts
src/lib/consolidation/: ConsolidationAnalyzer.more.test.ts  ConsolidationAnalyzer.test.ts  ConsolidationAnalyzer.ts  ConsolidationApplier.test.ts  ConsolidationApplier.ts  ConsolidationGenerator.ts  ConsolidationReviewer.ts  ConsolidationService.ts  ReviewUIManager.ts  constants.ts  prompts.ts  types.ts
src/lib/consolidation/__tests__/: CommitWorkflow.test.ts  ConsolidationAnalyzer.test.ts  ConsolidationApplier.test.ts  ConsolidationFeedback.test.ts  ConsolidationGenerator.private.test.ts  ConsolidationGenerator.test.ts  ConsolidationGeneratorRetry.test.ts  ConsolidationReviewer.test.ts  ConsolidationService.test.ts  TypeScriptLoop.test.ts
src/lib/consolidation/feedback/: FeedbackLoop.ts  TypeScriptLoop.ts
src/lib/hardening/: TestCoveragePrompts.ts  TestCoverageRaiser.ts
src/lib/hardening/__tests__/: TestCoveragePrompts.test.ts  TestCoverageRaiser.test.ts
src/lib/iterativeDiff/: FullScreenUI.ts
src/lib/models/: AnthropicClaudeModel.ts  BaseModel.test.ts  BaseModel.ts  Conversation.ts  GPT4oMiniModel.ts  GPT4oModel.ts  Gemini2FastModel.ts  Gemini2FlashModel.test.ts  Gemini2FlashModel.ts  Gemini2ProModel.test.ts  Gemini2ProModel.ts  OpenAIChatModel.ts  OpenAIMiniModel.ts  modelsEnum.ts
src/lib/models/__tests__/: BaseModel.test.ts  Conversation.test.ts  Gemini2FlashModel.test.ts  Gemini2ProModel.test.ts  OpenAIChatModel.test.ts  OpenAIMiniModel.test.ts  modelsEnum.test.ts
src/lib/prompts/: DiffFixPrompts.ts
src/lib/sample-project/: calculator.ts
src/lib/test/: CoverageService.ts  TestRunnerService.ts
src/lib/test/__tests__/: CoverageService.test.ts  TestRunnerService.test.ts
src/lib/typescript/services/agentic-tdd/: AgenticTddService.ts
src/lib/typescript/types/: specification.ts
src/lib/ui/: ScopeUIManager.ts  SublimeEditorInteraction.ts
src/lib/utilities/: LargeFileBreakdownService.ts
testisolation/: CMakeLists.txt  main.cpp
untitled/: main.js
(+8 files in other folders)
